--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,14 +73,7 @@ p {
     background-position: center;
 }
 
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-/* services styling */
+/* main section of services styling */
 main section {
     margin-bottom: 20px;
     padding: 50px;
@@ -101,8 +94,9 @@ main h2 {
 
 }
 
-/* Benefits styling */
-.benefits {
+/* benefits styling */
+
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -113,49 +107,17 @@ main h2 {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+aside div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
