--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,23 +29,23 @@
     margin-left: 25px;
   }
   /* header and navigation styling */
-  .header {
+  header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
   }
   
-  .header h1 {
+  header h1 {
     display: inline-block;
     font-size: 48px;
   }
   
-  .header h1 .seo {
+  header h1 .seo {
     color: #d9dcd6;
   }
   
-  .header div {
+  header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -53,11 +53,11 @@
     font-size: 20px;
   }
   
-  .header div ul {
+  header nav ul {
     list-style-type: none;
   }
   
-  .header div ul li {
+  header nav ul li {
     display: inline-block;
     margin-left: 25px;
   }
@@ -122,14 +122,14 @@
     max-width: 150px;
   }
   /* footer styling */
-  .footer {
+  footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
   }
   
-  .footer h2 {
+  footer h2 {
     font-size: 20px;
   }
   
