--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,13 @@
   }
   
   /* main section of services styling */
+  
+  main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+  
   main section {
     margin-bottom: 20px;
     padding: 50px;
